<resources>
    <string name="app_name">IrisCalendar</string>

    <!--account-->
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="not_member">아직 회원이 아니신가요?</string>
    <string name="sign_up">회원가입</string>
    <string name="password_confirm">비밀번호 재확인</string>

    <string name="set_time">할당시간 설정하기</string>
    <string name="set_time_info">여러분의 24시간 중\n
        일정을 위해 사용할 수 있는 시간은 언제부터 언제입니까?\n
        한시간 기준으로 시간을 설정할 수 있습니다.\n
        원하는 시간대를 체크해 주세요.\n
        세모 버튼을 클릭한 후\n
        시계를 시계방향으로 돌리면 시간이 선택되고\n
        다시 세모 버튼을 누르면 고정됩니다.</string>
    <string name="complete">완료</string>
    <string name="calendar">CALENDAR</string>
    <string name="today">Today</string>
    <string name="no_plan">일정이 없습니다.</string>
    <string name="setting">설정</string>
    <string name="re_time_set">할당 시간 재설정하기</string>
    <string name="modify_category">카테고리 수정하기</string>
    <string name="logout">로그아웃</string>
    <string name="add_schedule">일정 추가하기</string>
    <string name="add_fixed_schedule">고정일정 추가하기</string>
    <string name="cancel">취소</string>
    <string name="category">카테고리</string>
    <string name="todo">해아할 일정</string>
    <string name="end_date">일정을 끝마칠 날</string>
    <string name="back_to_exit">뒤로 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="date">일</string>
    <string name="required_time">소요 시간</string>
    <string name="time">시간</string>
    <string name="set_start_time">Set Start Time</string>
    <string name="set_end_time">Set End Time</string>
    <string name="am">AM</string>
    <string name="colon">:</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="pm">PM</string>
    <string name="_30">30</string>
    <string name="important_schedule">특히 중요한 일정</string>
    <string name="impossible_schedule">소화 불가능한 일정입니다</string>

    <string name="error_blank">공백을 모두 채워주세요</string>
    <string name="error_short_id">아이디는 최소 6 글자입니다</string>
    <string name="error_short_password">비밀번호는 최소 8 글자입니다</string>
    <string name="error_server_error">서버 문제가 발생했습니다</string>
    <string name="error_invalid_value">유효하지 않은 값입니다</string>
    <string name="error_not_same_password">비밀번호가 일치하지 않습니다</string>
    <string name="error_user_already_exists">이미 존재하는 사용자입니다</string>
    <string name="error_start_time_faster">시작 시간이 더 빠릅니다</string>
    <string name="error_same_time">시작과 끝 시간이 같습니다</string>

    <string name="success_category_modify">카테고리 수정에 성공했습니다</string>
    <string name="schedule">일정</string>

    <string name="ask_logout">정말 진심으로 \n로그아웃 하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="loading">로딩중입니다…</string>
    <string name="complete_schedule">일정 완료</string>
    <string name="modify_schedule">일정 수정하기</string>
</resources>
