<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_ask_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_logout"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="60dp" />

    <TextView
        android:id="@+id/tv_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_no"
        app:layout_constraintTop_toBottomOf="@id/tv_ask_logout"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/tv_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_yes"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toRightOf="@id/tv_yes"/>

</androidx.constraintlayout.widget.ConstraintLayout>