<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.modifyFixedSchedule.ModifyFixedScheduleActivity">
    <View
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_fixed_schedule"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/complete"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:background="@drawable/bg_round_white"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cancel">

        <com.dsm.iriscalendar.ui.custom.CategoryView
            android:id="@+id/cv_modify_fixed_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/todo"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/cv_modify_fixed_schedule"
            app:layout_constraintTop_toBottomOf="@id/cv_modify_fixed_schedule"
            android:layout_marginStart="30dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_todo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@null"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusDown="@id/et_year"
            app:layout_constraintLeft_toLeftOf="@id/tv_todo"
            app:layout_constraintRight_toRightOf="@id/view"
            app:layout_constraintTop_toBottomOf="@id/tv_todo" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#D5D5D5"
            app:layout_constraintLeft_toLeftOf="@id/et_todo"
            app:layout_constraintRight_toRightOf="@id/et_todo"
            app:layout_constraintTop_toBottomOf="@id/et_todo" />

        <TextView
            android:id="@+id/tv_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/schedule"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_todo"
            app:layout_constraintTop_toBottomOf="@id/et_todo" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_year"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:nextFocusDown="@id/et_month"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="@id/tv_end_date"
            app:layout_constraintRight_toLeftOf="@id/tv_year"
            app:layout_constraintStart_toStartOf="@+id/tv_end_date"
            app:layout_constraintTop_toBottomOf="@id/tv_end_date" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#D5D5D5"
            app:layout_constraintLeft_toLeftOf="@id/et_year"
            app:layout_constraintRight_toRightOf="@id/et_year"
            app:layout_constraintTop_toBottomOf="@id/et_year" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="@color/colorPrimaryLight"
            app:layout_constraintBottom_toBottomOf="@id/et_year"
            app:layout_constraintLeft_toRightOf="@id/et_year"
            app:layout_constraintRight_toLeftOf="@id/et_month"
            app:layout_constraintTop_toTopOf="@id/et_year" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_month"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:nextFocusDown="@id/et_date"
            app:layout_constraintBottom_toBottomOf="@id/et_year"
            app:layout_constraintLeft_toRightOf="@id/tv_year"
            app:layout_constraintRight_toLeftOf="@id/tv_month"
            app:layout_constraintTop_toTopOf="@id/et_year" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#D5D5D5"
            app:layout_constraintLeft_toLeftOf="@id/et_month"
            app:layout_constraintRight_toRightOf="@id/et_month"
            app:layout_constraintTop_toBottomOf="@id/et_month" />

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textColor="@color/colorPrimaryLight"
            app:layout_constraintBottom_toBottomOf="@id/et_month"
            app:layout_constraintLeft_toRightOf="@id/et_month"
            app:layout_constraintRight_toLeftOf="@id/et_date"
            app:layout_constraintTop_toTopOf="@id/et_month" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_date"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:nextFocusDown="@id/et_required_time"
            app:layout_constraintBottom_toBottomOf="@id/et_month"
            app:layout_constraintLeft_toRightOf="@id/tv_month"
            app:layout_constraintRight_toLeftOf="@id/tv_date"
            app:layout_constraintTop_toTopOf="@id/et_month" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#D5D5D5"
            app:layout_constraintLeft_toLeftOf="@id/et_date"
            app:layout_constraintRight_toRightOf="@id/et_date"
            app:layout_constraintTop_toBottomOf="@id/et_date" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/colorPrimaryLight"
            app:layout_constraintBottom_toBottomOf="@id/et_date"
            app:layout_constraintEnd_toEndOf="@+id/et_todo"
            app:layout_constraintLeft_toRightOf="@id/et_date"
            app:layout_constraintTop_toTopOf="@id/et_date" />

        <TextView
            android:id="@+id/tv_set_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/set_start_time"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_set_end"
            app:layout_constraintTop_toBottomOf="@id/et_year" />

        <TextView
            android:id="@+id/tv_start_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:text="@string/_0"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="@id/tv_set_start"
            app:layout_constraintRight_toLeftOf="@id/tv_start_colon"
            app:layout_constraintTop_toBottomOf="@id/tv_set_start" />

        <TextView
            android:id="@+id/tv_start_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_start_hour"
            app:layout_constraintLeft_toRightOf="@id/tv_start_hour"
            app:layout_constraintRight_toLeftOf="@id/tv_start_minute"
            app:layout_constraintTop_toTopOf="@id/tv_start_hour" />

        <TextView
            android:id="@+id/tv_start_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/_0"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_start_hour"
            app:layout_constraintLeft_toRightOf="@id/tv_start_colon"
            app:layout_constraintRight_toRightOf="@id/tv_set_start"
            app:layout_constraintTop_toTopOf="@id/tv_start_hour" />


        <TextView
            android:id="@+id/tv_set_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_end_time"
            android:textColor="@color/colorGrey"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_set_start"
            app:layout_constraintLeft_toRightOf="@id/tv_set_start"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_set_start" />

        <TextView
            android:id="@+id/tv_end_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:text="@string/_0"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="@id/tv_set_end"
            app:layout_constraintRight_toLeftOf="@id/tv_end_colon"
            app:layout_constraintTop_toBottomOf="@id/tv_set_end" />

        <TextView
            android:id="@+id/tv_end_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_end_hour"
            app:layout_constraintLeft_toRightOf="@id/tv_end_hour"
            app:layout_constraintRight_toLeftOf="@id/tv_end_minute"
            app:layout_constraintTop_toTopOf="@id/tv_end_hour" />

        <TextView
            android:id="@+id/tv_end_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/_0"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_end_hour"
            app:layout_constraintLeft_toRightOf="@id/tv_end_colon"
            app:layout_constraintRight_toRightOf="@id/tv_set_end"
            app:layout_constraintTop_toTopOf="@id/tv_end_hour" />

        <NumberPicker
            android:theme="@style/DefaultNumberPickerTheme"
            android:id="@+id/np_hour"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/np_minute"
            app:layout_constraintTop_toBottomOf="@id/tv_start_hour"
            android:layout_marginEnd="20dp"/>

        <NumberPicker
            android:theme="@style/DefaultNumberPickerTheme"
            android:id="@+id/np_minute"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintLeft_toRightOf="@id/np_hour"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/np_hour" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>