<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddScheduleActivity">
    
    <View
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimaryLight"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/add_schedule"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"
        android:background="@drawable/bg_round_white" />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/colorPrimaryLight"
        app:layout_constraintLeft_toLeftOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textSize="16sp"/>

    <View
        android:id="@+id/view_first"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:background="@drawable/bg_circle_purple"
        app:layout_constraintLeft_toLeftOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toLeftOf="@id/view_second"
        android:onClick="onClickCategory"/>

    <TextView
        android:id="@+id/tv_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_first"
        app:layout_constraintLeft_toLeftOf="@id/view_first"
        app:layout_constraintRight_toRightOf="@id/view_first"/>

    <View
        android:id="@+id/view_second"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:background="@drawable/bg_circle_orange"
        app:layout_constraintLeft_toRightOf="@id/view_first"
        app:layout_constraintTop_toTopOf="@id/view_first"
        app:layout_constraintBottom_toBottomOf="@id/view_first"
        app:layout_constraintRight_toLeftOf="@id/view_third"
        android:onClick="onClickCategory"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/view_second"
        app:layout_constraintRight_toRightOf="@id/view_second"
        app:layout_constraintTop_toBottomOf="@id/view_second"/>

    <View
        android:id="@+id/view_third"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:background="@drawable/bg_circle_red"
        app:layout_constraintLeft_toRightOf="@id/view_second"
        app:layout_constraintTop_toTopOf="@id/view_second"
        app:layout_constraintBottom_toBottomOf="@id/view_second"
        app:layout_constraintRight_toLeftOf="@id/view_fourth"
        android:onClick="onClickCategory"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_third"
        app:layout_constraintLeft_toLeftOf="@id/view_third"
        app:layout_constraintRight_toRightOf="@id/view_third"/>

    <View
        android:id="@+id/view_fourth"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:background="@drawable/bg_circle_orange"
        app:layout_constraintLeft_toRightOf="@id/view_third"
        app:layout_constraintTop_toTopOf="@id/view_third"
        app:layout_constraintBottom_toBottomOf="@id/view_third"
        app:layout_constraintRight_toRightOf="@id/view"
        android:onClick="onClickCategory"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/view_fourth"
        app:layout_constraintRight_toRightOf="@id/view_fourth"
        app:layout_constraintTop_toBottomOf="@id/view_fourth"/>

    <TextView
        android:id="@+id/tv_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/todo"
        android:textColor="@color/colorPrimaryLight"
        app:layout_constraintLeft_toLeftOf="@id/tv_category"
        app:layout_constraintTop_toBottomOf="@id/tv_first"
        android:layout_marginTop="30dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_todo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/tv_todo"
        app:layout_constraintRight_toRightOf="@id/view"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_todo"
        android:background="@null"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#D5D5D5"
        app:layout_constraintLeft_toLeftOf="@id/et_todo"
        app:layout_constraintRight_toRightOf="@id/et_todo"
        app:layout_constraintTop_toBottomOf="@id/et_todo"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_todo"
        app:layout_constraintTop_toBottomOf="@id/et_todo"
        android:layout_marginTop="30dp"
        android:id="@+id/tv_end_date"/>


</androidx.constraintlayout.widget.ConstraintLayout>